Hiệu chỉnh dashboard, giao diện các trang quản lý